--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -22,3 +22,11 @@ body
     user-select: none;
     height: 100vh;
 }
+
+@media only screen and (max-width:500px) 
+{
+    html
+    {
+       font-size: 13px;
+    }
+}
