--- a/src/scss/conponents/_game.scss
+++ b/src/scss/conponents/_game.scss
@@ -130,7 +130,8 @@
         &-img
         {
             position: absolute;
-            transform: translate(-11rem,-1.5rem);
+            transform: translate(-9.2rem, -1.5rem);
+            height: 120%;
             top: 0;
             &.lose
             {
